# IG_Practica_Final

./: CMakeLists.txt
src/: Model.cpp  Model.h  Shaders.cpp  Shaders.h  Texture.cpp  Texture.h  main.cpp
